Replace apacheds-protocol-dns with mock Netty dns server in tests